# qd-agents

./: .gitignore  .gitmodules  DESIGN.md  INSTALL_MCP_WEATHER.md  README.md  REQUIREMENTS.md  REQUIREMENTS.revised.md  config.json.template  diagnose_mcp.py  issues.md  meta-agent.py  new-design copy.md  new-design.md  new.md  pyproject.toml
data/: chat_history.txt  context_skills.json  evolve_tools.db  memory.db  tools.db  traces.db
docs/: mcp_weather_integration.md
examples/: mcp_http_client.py  mcp_weather_example.py  simple_mcp_usage.py
src/qd_agents/: __init__.py  cli.py  orchestrator.py
src/qd_agents/agent/: __init__.py  add_skill.py  add_skill_meta.py  base.py  builtin_tools.py  builtins.py  chat.py  code_plan.py  coding_meta.py  core.py  evolve.py  evolve_meta.py  find_tools.py  judge_meta.py  mcp_service.py  tool_calling_meta.py  tool_execution.py  tool_service.py  tool_use.py  tool_use_meta.py  url_analyzer.py  use_tool.py
src/qd_agents/agents/: __init__.py  session_agent.py  tool_agent.py
src/qd_agents/cli/: __init__.py  app.py  main.py  main_backup.py
src/qd_agents/config/: __init__.py  loader.py  models.py  paths.py
src/qd_agents/context/: __init__.py  compressor.py  manager.py
src/qd_agents/execution/: __init__.py  engine.py  executor.py
src/qd_agents/intent/: __init__.py  builder.py  schema.py
src/qd_agents/llm/: __init__.py  client.py  formatters.py  logging.py  scoring.py
src/qd_agents/memory/: __init__.py  embedder.py  long_term.py  recall.py  service.py  short_term.py  store.py
src/qd_agents/models/: __init__.py  add_skill.py  evolve.py  execution.py  find_tools.py  job.py  judge.py  nvidia_pool.py  tool.py  url_analyze.py  use_tool.py
src/qd_agents/orchestrator/: __init__.py  code_plan_mode.py  tool_use_mode.py  two_phase.py
src/qd_agents/prompts/: __init__.py  loader.py
src/qd_agents/registry/: __init__.py  registry.py
src/qd_agents/services/: __init__.py  mcp_service.py  tool_service.py
src/qd_agents/tools/: __init__.py  builtin_register.py  builtin_search.py  env.py  errors.py  (+8 more)
tools/cli/: memory_list.json  memory_recall.json
tools/mcp/: baidu-search.json  fetch.json  filesystem.json  mcp-server-fetch.json  open-meteo-mcp-server.json  serper-search.json
(+102 files in other folders)
