[project]
name = "qd-agents"
version = "0.1.0"
description = "用Python编排和执行自动化流程的Agent系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
qd-agents = "qd_agents.cli:main"
