[project]
name = "qd-agents"
version = "0.1.0"
description = "用Python编排和执行自动化流程的Agent系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "prompt-toolkit>=3.0.52",
    "questionary>=2.1.1",
    "mcp-weather-server>=0.6.1",
    "pymupdf>=1.27.0",
    "mcp-server-fetch>=2025.1.17",
    "pyyaml>=6.0.3",
    "markitdown[all]>=0.1.5",
    "sqlite-vec>=0.1.9",
    "llama-cpp-python>=0.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.uv]
package = true
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = ["https://abetlen.github.io/llama-cpp-python/whl/cpu"]

[project.scripts]
qd-agents = "qd_agents.cli:run"